Add GitHub Pages deploy workflow

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mohand Ahmed - Portfolio</title>
+    <title>Mohand Ahmed</title>
     <meta name="description" content="مهند أحمد - مطور Full-Stack ومصمم واجهات مستخدم UI/UX" />
     <meta name="author" content="Mohand Ahmed" />
 
-    <meta property="og:title" content="Mohand Ahmed - Portfolio" />
+    <meta property="og:title" content="Mohand Ahmed" />
     <meta property="og:description" content="مهند أحمد - مطور Full-Stack ومصمم واجهات مستخدم UI/UX" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
